started working on unit tests