@@ -108,6 +108,29 @@ task writeClasspath(dependsOn: build) << {
     }
 }
 
-task getHomeDir << {
-    println gradle.gradleHomeDir
+test {
+    // enable TestNG support (default is JUnit)
+    useJUnit()
+
+    testSrcDirs = ['src/test/java']
+
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+    }
 }
